add objectinspector to convert numbers